[package]
name = "observatory"
version = "0.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
eyre = "0.6.12"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
log = "0.4.29"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
reqwest = { version = "0.13.2", features = ["json", "query", "gzip"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
unidiff = "0.4.0"
viz = { version = "0.11.0", features = ["json", "limits"] }

# for simplelog format
time = "0.3.47"
hmac = "0.12.1"
ring = "0.17.14"
async-trait = "0.1.89"
mockito = "1.7.2"
regex = "1.12.3"
